# YetAnotherVoronoi

./: .gitignore  CMakeLists.txt  README.md
documentation/: F-Sites.kig  MainClasses.puml
libyav/: CMakeLists.txt  README.md
libyav/include/yav/: yav.hpp
libyav/include/yav/generator/: ClosestPrimitive.h  ClosestSite.h  FaceSite.h  Generator.h  OctreeNode2.h  OctreeNode3.h  QuadtreeNode.h  VoronoiQuadtreeBuilder.h  VoronoiQuadtreeNode.h
libyav/include/yav/generator/bisector/: AbstractBisectorGenerator.h  EdgeEdgeBisectorGenerator.h  EdgeVertexBisectorGenerator.h  FaceEdgeBisectorGenerator.h  FaceFaceBisectorGenerator.h  FaceVertexBisectorGenerator.h  VertexVertexBisectorGenerator.h
libyav/include/yav/generator/region/: AbstractVoronoiRegion.h  Cone.h  HalfPlaneSlice.h  Slab.h
libyav/include/yav/geometry/: Box2.h  Line2.h  Point2.h  Point3.h  Point3Operations.h  Segment2.h  Segment3.h  Triangle3.h
libyav/include/yav/space/: AbstractSpace.h  Primitive.h  Space.h  Space2.h  Space3.h
libyav/include/yav/space/primitive/: AbstractPrimitive.h  Edge2.h  Vertex2.h
libyav/include/yav/space/site/: AbstractSite.h  Edge.h  Edge2.h  Edge3.h  SiteKind.h  Triangle.h  Triangle3.h  Vertex.h  Vertex2.h  Vertex3.h
libyav/include/yav/voronoi/: Cell.h  CellPatch.h  Diagram.h
libyav/include/yav/voronoi/equisurface/: AbstractBisector.h  Paraboloid.h  Plane.h
libyav/src/: yav.cpp
libyav/src/generator/: Generator.cpp  OctreeNode2.cpp  OctreeNode3.cpp  QuadtreeNode.cpp  VoronoiQuadtreeBuilder.cpp  VoronoiQuadtreeNode.cpp
libyav/src/generator/bisector/: AbstractBisectorGenerator.cpp  EdgeEdgeBisectorGenerator.cpp  EdgeVertexBisectorGenerator.cpp  FaceEdgeBisectorGenerator.cpp  FaceFaceBisectorGenerator.cpp  FaceVertexBisectorGenerator.cpp  VertexVertexBisectorGenerator.cpp
libyav/src/generator/region/: AbstractVoronoiRegion.cpp  Cone.cpp  HalfPlaneSlice.cpp  Slab.cpp
libyav/src/geometry/: Point2.cpp  Point3.cpp  Point3Operations.cpp  Segment2.cpp
libyav/src/space/: AbstractSpace.cpp  Primitive.cpp  Space.cpp  Space2.cpp  Space3.cpp
libyav/src/space/primitive/: AbstractPrimitive.cpp  Edge2.cpp  Vertex2.cpp
libyav/src/space/site/: AbstractSite.cpp  Edge.cpp  Edge2.cpp  Edge3.cpp  Triangle.cpp  Triangle3.cpp  Vertex.cpp  Vertex2.cpp  Vertex3.cpp
libyav/src/voronoi/: Cell.cpp  CellPatch.cpp  Diagram.cpp
libyav/src/voronoi/equisurface/: AbstractBisector.cpp  Paraboloid.cpp  Plane.cpp
yav/: CMakeLists.txt  README.md
yav/src/: main.cpp
yavui/: CMakeLists.txt  README.md
yavui/include/yavui/: VoronoiGraphicsView.h
yavui/src/: VoronoiGraphicsView.cpp  main.cpp
